# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

time_root_path = "//base/miscservices/time"

kits_path = "${time_root_path}/interface/kits"

innerkits_path = "${time_root_path}/interfaces/innerkits"

time_utils_path = "${time_root_path}/utils"

adapter_path = "${time_root_path}/adapter"