# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

permission_path = "//base/security/permission"

distributed_permission_record_database_path =
    "${permission_path}/frameworks/permission_standard/permissionrecorddatabase"
distributed_permission_frameworks_log_path =
    "${permission_path}/frameworks/permission_standard/permissioninfrastructure"
distributed_permission_innerkits_distributed_path = "${permission_path}/interfaces/innerkits/permission_standard/distributedpermission"
distributed_permission_kits_path = "${permission_path}/interfaces/kits/permission_standard/distributedpermission"
distributed_permission_services_path = "${permission_path}/services/permission_standard/distributedpermissionmanagerservice"
distributed_permission_standard_path =
    "${permission_path}/services/permission_standard"
distributed_permission_innerkits_sdk_path =
    "${permission_path}/interfaces/innerkits/permission_standard/permissionsdk"
distributed_permission_sttest_path =
    "${permission_path}/test/systemtest/common/distributedpermission"
foundation_services_path = "//foundation/appexecfwk/standard/services"

aafwk_path = "//foundation/aafwk/standard"
appexecfwk_path = "//foundation/appexecfwk/standard"
appspawn_path = "//base/startup/appspawn_standard"
even_path = "//base/notification/ces_standard"

libs_path = "${appexecfwk_path}/libs"
common_path = "${appexecfwk_path}/common"
services_path = "${appexecfwk_path}/services"
kits_path = "${appexecfwk_path}/kits"
innerkits_path = "${appexecfwk_path}/interfaces/innerkits"
tools_path = "${appexecfwk_path}/tools"
test_hap_common_path = "${appexecfwk_path}/test/common"
system_test_app_path =
    "${permission_path}/test/resource/dpmssystemtestability/abilitySrc"
dispatcher_path = "${appexecfwk_path}/interfaces/innerkits/task_dispatcher"
