# Copyright (c) 2022 FuZhou Lockzhiner Electronic Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/adapter/khdf/liteos_m/hdf.gni")
import("//device/rockchip/rk2206/sdk_liteos/board.gni")

action("hardware") {
    script = "//build/lite/run_shell_cmd.py"
    sources = [
        "libhardware.a",
    ]
    outputs = [
        "${root_out_dir}/libs/",
    ]
    args = [
        "cp",
        "-f",
        rebase_path(sources[0]),
        rebase_path(outputs[0]),
    ]
}

