# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/miscservices/time/time.gni")

config("time_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//base/miscservices/time/interfaces/innerkits/include",
    "../utils/native/include",
    "time_manager/include",
    "timer/include",
    "//utils/system/safwk/native/include",
    "//third_party/json/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/distributeddatamgr/appdatamgr/interfaces/innerkits/native_rdb/include/",
    "/foundation/distributeddatamgr/appdatamgr/interfaces/innerkits/native_appdatafwk/include/",
  ]
  cflags_cc = [ "-fexceptions" ]
}

ohos_shared_library("time_service") {
  sources = [
    "time_manager/src/itimer_info.cpp",
    "time_manager/src/time_service.cpp",
    "time_manager/src/time_service_client.cpp",
    "time_manager/src/time_service_notify.cpp",
    "time_manager/src/time_service_proxy.cpp",
    "time_manager/src/time_service_stub.cpp",
    "time_manager/src/time_zone_info.cpp",
    "time_manager/src/timer_call_back.cpp",
    "time_manager/src/timer_call_back_proxy.cpp",
    "time_manager/src/timer_call_back_stub.cpp",
    "timer/src/batch.cpp",
    "timer/src/timer_handler.cpp",
    "timer/src/timer_info.cpp",
    "timer/src/timer_manager.cpp",
  ]
  configs = [ "${time_utils_path}:utils_config" ]
  public_configs = [
    "//utils/native/base:utils_config",
    "//third_party/jsoncpp:jsoncpp_public_config",
    ":time_service_config",
  ]
  deps = [
    "${time_utils_path}:time_utils",
    "//base/notification/ans_standard/frameworks/wantagent:wantagent_innerkits",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/distributeddatamgr/appdatamgr/interfaces/innerkits/native_appdatafwk:native_appdatafwk",
    "//foundation/distributeddatamgr/appdatamgr/interfaces/innerkits/native_preferences:native_preferences",
    "//foundation/distributeddatamgr/appdatamgr/interfaces/innerkits/native_rdb:native_rdb",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "aafwk_standard:base",
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]
  part_name = "time_native"
  subsystem_name = "miscservices"
}
