# Copyright (c) 2022 FuZhou Lockzhiner Electronic Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/lite_subsystem.gni")

declare_args() {
  enable_hos_vendor_wifiiot_xts = false
}

lite_subsystem("wifiiot_sdk") {
  subsystem_components = [ ":sdk" ]
}

build_ext_component("liteos") {
  exec_path = rebase_path(".", root_build_dir)
  outdir = rebase_path(root_out_dir)
  command = "sh ./build.sh $outdir"
  deps = [
    ":sdk",
    "//build/lite:ohos",
  ]
  if (enable_hos_vendor_wifiiot_xts) {
    deps += [ "//build/lite/config/subsystem/xts:xts" ]
  }
}

lite_component("sdk") {
  features = []

  deps = [
    "//device/rockchip/rk2206/sdk_liteos/board:board",
    "//device/rockchip/hardware:hardware",
    # xts
    "//device/rockchip/rk2206/adapter/hals/update:hal_update_static",
    # xts
    "//base/update/ota_lite/frameworks/source:hota",
    "../third_party/littlefs:lzlittlefs",
    "//build/lite/config/component/cJSON:cjson_static",
    "../third_party/lwip:rk2206_lwip",
    "//kernel/liteos_m/components/net/lwip-2.1:lwip",
    "//vendor/lockzhiner/rk2206/samples:app",
    "//third_party/paho_mqtt:pahomqtt_static",
    "//vendor/lockzhiner/rk2206/hdf_config:hdf_config",
    "//vendor/lockzhiner/rk2206/hdf_drivers:hdf_drivers",
    "//drivers/adapter/khdf/liteos_m/test/sample_driver:sample_driver",
    #"//drivers/adapter/uhdf/manager:hdf_manager",
    #"//drivers/adapter/uhdf/posix:hdf_posix",
  ]
}

