# Copyright (c) 2022 FuZhou Lockzhiner Electronic Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/adapter/khdf/liteos_m/hdf.gni")
import("//device/rockchip/rk2206/sdk_liteos/board.gni")

static_library("board") {
  sources = [
      "./startup/startup_rk2206.S",
      "./dprintf.c",
      "./main.c",
      "./iotmain.c",
      "./src/config_network.c",
  ]

  include_dirs = [
    "$kernel_path/kernel/include",
    "$kernel_path/kernel/arch/include",
    "$kernel_path/utils",
    "$kernel_path/kal/cmsis",
    "$hilog_path/interfaces/native/kits",
    "$adapter_path/include",
    "./include",
    "//third_party/cJSON",
    "//third_party/lwip/src/include",
    "//third_party/musl/porting/liteos_m/kernel/include",
    "$rk_third_party_dir/simple_gui/inc",
    "$hdf_fwk_path/include/platform",
    "$hdf_fwk_path/include/utils",
    "$hdf_fwk_path/include/osal",
    "$khdf_path/osal/include",
  ]

  deps = [ ]
}
